# Rust--Template--ActixWebMySQLConnections

./: Cargo.toml  README.md  gitattributes.txt
sql/: setup.sql
src/: index.html  main.rs
