[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
sqlx-mysql = "0.7.2"
sqlx = {version="0.7.2", features = ["runtime-async-std", "macros", "mysql"]}
futures = "0.3.29"